--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -23,3 +23,10 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+#tri-curve {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
