--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,3 +8,18 @@ html, body, #root {
   height: 100%;
   overflow: hidden;
 }
+
+::selection {
+    background:#36C6D3; 
+    color:#fff;
+}
+
+::-moz-selection {
+    background:#36C6D3; 
+    color:#fff;
+}
+
+::-webkit-selection {
+    background:#36C6D3;
+    color:#fff;
+}
