--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,3 +23,55 @@ html, body, #root {
   background: #36C6D3;
   color: #fff;
 }
+
+.tran-parent {
+  position: relative;
+}
+
+.tran-box {
+  animation-fill-mode: forwards;
+  -webkit-animation-fill-mode: forwards;
+}
+
+.tran-box.show {
+  animation: fade-in 1s ease;
+}
+
+.tran-box.hidden {
+  animation: fade-out 1s ease;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+    display: block;
+  }
+  1% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+    display: block;
+  }
+}
+
+@keyframes fade-out {
+  0% {
+    opacity: 1;
+    transform: translate(0);
+    display: block;
+  }
+  99% {
+    opacity: 0;
+    transform: translateX(-100px);
+    display: block;
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(-100px);
+    display: none;
+  }
+}
