--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,3 +23,60 @@ html, body, #root {
     background:#36C6D3;
     color:#fff;
 }
+
+.tran-parent {
+  position: relative;
+}
+
+.tran-box {
+  // transition: all 1s ease, left 1s ease 1s;
+  animation-fill-mode: forwards;
+  -webkit-animation-fill-mode: forwards;
+}
+
+.tran-box.show {
+  // opacity: 1;
+  // transform: translateX(0);
+  animation: fade-in 1s ease;
+}
+
+.tran-box.hidden {
+  // opacity: 0;
+  // transform: translateX(-100px);
+  animation: fade-out 1s ease;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+    display: block;
+  }
+  1% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+    display: block;
+  }
+}
+
+@keyframes fade-out {
+  0% {
+    opacity: 1;
+    transform: translate(0);
+    display: block;
+  }
+  99% {
+    opacity: 0;
+    transform: translateX(-100px);
+    display: block;
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(-100px);
+    display: none;
+  }
+}
